# ML_lib_scratch

./: .gitignore  CMakeLists.txt  KNN.py  README.md  linear_regression.py  main.py  standard_scaler.py
c++/include/: KNN.hpp  Perceptron.hpp
c++/src/: KNN.cpp
src/: boundary_frontier.py  main.py  naive_bayes.py
src/classification/: KNN.py  logistic_regression.py
src/linear regression/: linear_regression.py
src/linear_regression/: linear_regression.py
src/score/: accuracy.py  mse.py
src_pp/: naive_bayes.py  perceptron.py
src_pp/base_regression/: base_regression.py
src_pp/classification/: logistic_regression.py
src_pp/score/: accuracy.py
